--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "deploy": "pnpm run build && wrangler deploy",
         "cf-typegen": "wrangler types --env-interface CloudflareBindings",
         "postinstall": "pnpm run cf-typegen && pnpm exec simple-git-hooks",
+        "test": "vitest",
         "format": "node --experimental-strip-types node_modules/prettier/bin/prettier.cjs --write ."
     },
     "dependencies": {
@@ -25,10 +26,12 @@
     },
     "devDependencies": {
         "@cloudflare/vite-plugin": "^1.2.3",
+        "@types/node": "^24.5.2",
         "prettier": "^3.2.5",
         "simple-git-hooks": "^2.13.1",
         "vite": "^6.3.5",
         "vite-ssr-components": "^0.5.1",
+        "vitest": "^3.2.4",
         "wrangler": "^4.17.0"
     },
     "packageManager": "pnpm@10.16.1+sha512.0e155aa2629db8672b49e8475da6226aa4bdea85fdcdfdc15350874946d4f3c91faaf64cbdc4a5d1ab8002f473d5c3fcedcd197989cf0390f9badd3c04678706"
