--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "template-hono",
+    "name": "arisutalk-cors-proxy",
     "private": true,
     "license": "Apache-2.0",
     "engines": {
